base/ns-choreo-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: choreo-system
spec:
  finalizers:
  - kubernetes
