base/dep-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    choreo.component: frontend
  name: frontend
  namespace: choreo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      choreo.component: frontend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/choreo: "true"
        choreo.component: frontend
    spec:
      containers:
      - env:
        - name: APP_API
          value: https://depman.development.choreo.dev
        - name: AUTH_FLOW
          value: B2C_1_Signup
        - name: CLIENT_ID
          value: cb4bcbd9-d807-492d-ba42-2ecb12eaa45f
        - name: LOGS_API
          value: wss://depman.development.choreo.dev
        - name: OBSERVE_API
          value: http://ingress.local/graphql
        - name: REDIRECT_URL
          value: https://development.choreo.dev/
        - name: TENANT
          value: choreodevb2c
        image: choreoipaas/console-app:latest
        imagePullPolicy: ""
        name: frontend
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
