base/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    choreo.component: frontend
  name: frontend
spec:
  type: NodePort
  ports:
  - name: "frontend-port"
    port: 8080
    targetPort: 8080
    nodePort: 31250
  selector:
    choreo.component: frontend
