base/svc-obs-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert --file /Users/azeez/projects/choreo-ipaas/choreo/services/docker-compose.yaml
      -o choreo-k8s
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: observability-api
  name: observability-api
  namespace: choreo-system
spec:
  ports:
  - name: "9095"
    port: 9095
    targetPort: 9095
  selector:
    io.kompose.service: observability-api
