base/svc-telemetry.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: telemetry
  name: telemetry
  namespace: choreo-system
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    io.kompose.service: telemetry
